# Borgitory-docs

./: .readthedocs.yaml  README.rst  pyproject.toml
docs/source/: api.rst  architecture.rst  changelog.rst  cloud-providers.rst  conf.py  contributing.rst  features.rst  index.rst  installation.rst  license.rst  troubleshooting.rst  usage.rst
docs/source/_static/: .gitkeep  dark-mode.css  dark-mode.js
docs/source/how-to/: automated-backup-workflows.rst  backup-patterns.rst  backup-strategies.rst  custom-compression-settings.rst  docker-deployment-guide.rst  exclude-patterns.rst  index.rst  job-hooks-system.rst  migrate-repositories.rst  monitoring-backup-health.rst  multi-cloud-sync.rst  network-storage-integration.rst  package-manager.rst  performance-optimization.rst  repository-maintenance.rst  setup-aws-s3.rst  setup-azure-blob.rst  setup-google-cloud.rst  setup-multiple-repositories.rst  setup-pushover-notifications.rst  windows-wsl-setup.rst
